--- a/BigSchool/BigSchool/BigSchool.csproj
+++ b/BigSchool/BigSchool/BigSchool.csproj
@@ -214,6 +214,10 @@
     <Compile Include="Migrations\202006040318401_PopulateCategoryTable.Designer.cs">
       <DependentUpon>202006040318401_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006110352589_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202006110352589_AddNameColumnToApplicationUser.Designer.cs">
+      <DependentUpon>202006110352589_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -310,6 +314,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006040318401_PopulateCategoryTable.resx">
       <DependentUpon>202006040318401_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006110352589_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202006110352589_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
