--- a/BigSchool/BigSchool/BigSchool.csproj
+++ b/BigSchool/BigSchool/BigSchool.csproj
@@ -209,8 +209,11 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
+    <Compile Include="Controllers\FollowingsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DTOs\AttendanceDto.cs" />
+    <Compile Include="DTOs\FollowingDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -234,6 +237,10 @@
     <Compile Include="Migrations\202006172007559_addAttendance.Designer.cs">
       <DependentUpon>202006172007559_addAttendance.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006180308540_addFollowingsTable.cs" />
+    <Compile Include="Migrations\202006180308540_addFollowingsTable.Designer.cs">
+      <DependentUpon>202006180308540_addFollowingsTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -241,6 +248,7 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Following.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -337,6 +345,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006172007559_addAttendance.resx">
       <DependentUpon>202006172007559_addAttendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006180308540_addFollowingsTable.resx">
+      <DependentUpon>202006180308540_addFollowingsTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
