--- a/BigSchool/BigSchool/BigSchool.csproj
+++ b/BigSchool/BigSchool/BigSchool.csproj
@@ -207,6 +207,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\CoursesController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\FollowingsController.cs" />
@@ -240,6 +241,10 @@
     <Compile Include="Migrations\202006180308540_addFollowingsTable.cs" />
     <Compile Include="Migrations\202006180308540_addFollowingsTable.Designer.cs">
       <DependentUpon>202006180308540_addFollowingsTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202006242145540_AddIsCanceledColumnToCourse.cs" />
+    <Compile Include="Migrations\202006242145540_AddIsCanceledColumnToCourse.Designer.cs">
+      <DependentUpon>202006242145540_AddIsCanceledColumnToCourse.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -319,6 +324,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Courses\Create.cshtml" />
     <Content Include="Views\Courses\Attending.cshtml" />
+    <Content Include="Views\Courses\Mine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -349,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006180308540_addFollowingsTable.resx">
       <DependentUpon>202006180308540_addFollowingsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006242145540_AddIsCanceledColumnToCourse.resx">
+      <DependentUpon>202006242145540_AddIsCanceledColumnToCourse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
